add BearerToken
