# storage/api-docs/api-docs.json
@@ -108,27 +108,11 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Logout a user",
+                "summary": "Logout the current user",
                 "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
-                "parameters": [
-                    {
-                        "name": "Authorization",
-                        "in": "header",
-                        "description": "Bearer token",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "Bearer {token}"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "description": "No body required for logout",
-                    "required": false
-                },
                 "responses": {
                     "200": {
-                        "description": "User logged out successfully",
+                        "description": "Logged out successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -138,16 +122,6 @@
                                             "example": "Logged out successfully"
                                         }
                                     },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Invalid token",
-                        "content": {
-                            "application/json": {
-                                "schema": {
                                     "type": "object"
                                 }
                             }
@@ -422,16 +396,21 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
             }
         },
-        "/api/user/{id}": {
+        "/api/users/{id}": {
             "get": {
                 "tags": [
                     "Users"
                 ],
                 "summary": "Get user by ID",
-                "operationId": "d8f696420bea235f4916124c9ba1c507",
+                "operationId": "36a33ff774d5cba33c039dec2c3e0287",
                 "parameters": [
                     {
                         "name": "id",
@@ -470,14 +449,19 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
                     "Users"
                 ],
                 "summary": "Update user by ID",
-                "operationId": "5e09c26a0abb2b1bf040badb2d9c69ba",
+                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
                 "parameters": [
                     {
                         "name": "id",
@@ -575,14 +559,19 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
                     "Users"
                 ],
                 "summary": "Delete user by ID",
-                "operationId": "f8d7aea516ee464d0afee90f3a1a1722",
+                "operationId": "fa56cffde745d3f152f95cbacd936c0b",
                 "parameters": [
                     {
                         "name": "id",
@@ -627,7 +616,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
             }
         }
     },
@@ -666,9 +660,9 @@
                         "type": "string"
                     },
                     "starting_at": {
-                        "description": "Starting date and time",
+                        "description": "Starting date",
                         "type": "string",
-                        "format": "date-time"
+                        "format": "date"
                     },
                     "available_places": {
                         "description": "Number of available places",
@@ -683,14 +677,14 @@
                         "type": "integer"
                     },
                     "created_at": {
-                        "description": "Creation timestamp",
+                        "description": "Creation date",
                         "type": "string",
-                        "format": "date-time"
+                        "format": "date"
                     },
                     "updated_at": {
-                        "description": "Last update timestamp",
+                        "description": "Last update date",
                         "type": "string",
-                        "format": "date-time"
+                        "format": "date"
                     }
                 },
                 "type": "object"
@@ -714,9 +708,9 @@
                         "type": "string"
                     },
                     "starting_at": {
-                        "description": "Starting date and time",
+                        "description": "Starting date",
                         "type": "string",
-                        "format": "date-time"
+                        "format": "date"
                     },
                     "available_places": {
                         "description": "Number of available places",
@@ -777,6 +771,13 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "sanctum": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     },
